claude-3-7-sonnet-20250219: Fix Java 17 compatibility and Spark 3.5 ExpressionEncoder API
- Added Java 17 module system flags to Test/javaOptions for Spark compatibility
- Fixed SparkCompat.isSpark4 detection to check actual ExpressionEncoder constructor
- Added support for Spark 3.5+ ExpressionEncoder(Expression, Expression, ClassTag) constructor
- Resolves NoClassDefFoundError: Could not initialize class org.apache.spark.storage.StorageUtils$